20080324 disk/disk.c: add additional handling for fake sectors (part of patch
         #1882836) (Gergely Szasz).
20080325 disk/disk.[ch]: add support for disks with eak sectors that are longer
         than 6144 bytes (primarily Coin Op Hits with 6500 bytes per track)
         (part of patch #1882836) (Gergely Szasz).
20080325 README,Makefile.am,configure.in,
         disk/{Makefile.am,upd_fdc.[ch]},event.[ch]},machine.c,
         machines/{specplus3.[ch],specplus3e.c},man/fuse.1,menu.c,
         menu_data.dat,ui.c,ui/ui.h,utils.c: replace lib765 and libdsk with
         new upd765 FDC emulation for +3 (remainder of patch #1882836)
         (thanks, Mark Woodmass) (Gergely Szasz).
20080326 configure.in,windres.rc,ui/win32/{win32ui.c,win32joystick.{c,h,rc},
	 Makefile.am}: Win32: Implementation of the Configure Joystick
	 dialog. Joystick will be read using Windows' mmsystem library (Marek).
20080327 ui/win32/{win32ui.c,win32mouse.c,win32internals.h,Makefile.am}: Win32:
	 Implementation of the mouse functions (Marek).
20080327 ui/win32/{binary.{c,h,rc}}: Win32: Added prefix BINARY to Binary
	 dialogs ids, used Windows' constants for OK and Cancel (Marek).
20080327 windres.rc,ui/win32/{browse.h,debugger.{h,rc},memorybrowser.h,
	 options.pl,options-{header,resource}.pl,picture.{c,h,rc},pokefinder.h,
	 roms.{c,h,rc},select_template.{h,rc},win32ui.c}: Win32: Made dialogs
	 use IDOK, IDCANCEL, IDCLOSE and IDCONTINUE to use dialog manager's
	 capabilities
	 (http://blogs.msdn.com/oldnewthing/archive/2004/12/14/300204.aspx)
	 (Marek).
20080328 loader.c: let loader detection work with the Digital Integration
	 loader (ATF, Tomahawk, TT Racer).
20080401 z80/z80_ops.c: cgoto array was one entry too small, leading to
	 buffer overflow (fixes bug #1931036).
20080401 loader.[ch],settings.dat,tape.c,ui/options.dat: add support for
	 tape acceleration (slightly extended version of patch #1880376).
20080401 loader.c: add acceleration for Search Loader (Deflektor, Rana Rama).