@@ -1937,20 +1937,34 @@ The variant of the Spectrum released by Timex in North America.
 .RE
 .PP
 .I "Pentagon 128K"
-.br
+.RS
+Russian clone of the Spectrum. There were many different machines
+called Pentagon from 1989 to 2006, this machine corresponds to a
+1991 era Pentagon-128K with the optional AY sound chip and the
+integrated Beta 128 disk interface, and is the version of the
+machine most often emulated. More technical details can be found
+at
+.IR "http://www.worldofspectrum.org/rusfaq/index.html" ,
+.RE
+.PP
 .I "Pentagon 512K"
 .br
 .I "Pentagon 1024K"
-.br
+.RS
+Newer versions of the Pentagon Russian Spectrum clones which
+incorporate more memory and the "Mr Gluk Reset Service" ROM
+offering a more powerful firmware.
+.RE
+.PP
 .I "Scorpion ZS 256"
 .RS
-Russian clones of the Spectrum. Some details can be found
+Another Russian clone of the Spectrum. Some details can be found
 at
-.IR "http://www.worldofspectrum.org/rusfaq/index.html" ,
-but possibly the most important thing to note about both these
-machines is that they have built in 3.5" disk drives, accessed via the
-Beta disk interface and TR-DOS (the Technology Research Disk Operating
-System).
+.IR "http://www.worldofspectrum.org/rusfaq/index.html" , like all the
+Russian clones they they have built in 3.5" disk drives, accessed via
+the Beta 128 disk interface and TR-DOS (the Technology Research Disk
+Operating System). The most important distinction from the Pentagon
+128k and similar machines is the display timing details.
 .RE
 .PP
 .I "Spectrum SE"
