@@ -179,7 +179,6 @@ rom_ts2068_1, string, "tc2068-1.rom",
 rom_pentagon_0, string, "128p-0.rom",
 rom_pentagon_1, string, "128p-1.rom",
 rom_pentagon_2, string, "trdos.rom",
-rom_pentagon_3, string, "gluck.rom",
 rom_pentagon512_0, string, "128p-0.rom",
 rom_pentagon512_1, string, "128p-1.rom",
 rom_pentagon512_2, string, "trdos.rom",
